k8s/flask-deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: flask-app
#  labels:
#    app: flask-app
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: flask-app
#  template:
#    metadata:
#      labels:
#        app: flask-app
#    spec:
#      containers:
#      - name: flask-container
#        image: gcr.io/PROJECT_ID/flask-app:IMAGE_TAG
#        ports:
#        - containerPort: 5000
#        imagePullPolicy: Always
# flask-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
      version: blue
  template:
    metadata:
      labels:
        app: flask
        version: blue
    spec:
      containers:
      - name: flask
        image: gcr.io/PROJECT_ID/flask-app:IMAGE_TAG
        ports:
        - containerPort: 5000
        imagePullPolicy: Always


---
# flask-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
      version: green
  template:
    metadata:
      labels:
        app: flask
        version: green
    spec:
      containers:
      - name: flask
        image: gcr.io/PROJECT_ID/flask-app:IMAGE_TAG
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
