k8s/nodejs-deployment.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: nodejs-app
#  labels:
#    app: nodejs-app
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: nodejs-app
#  template:
#    metadata:
#      labels:
#        app: nodejs-app
#    spec:
#      containers:
#      - name: nodejs-container
#        image: gcr.io/PROJECT_ID/node-app:IMAGE_TAG
#        ports:
#        - containerPort: 3000
#        imagePullPolicy: Always
# node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: gcr.io/PROJECT_ID/node-app:IMAGE_TAG
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
