k8s/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: ClusterIP
  selector:
    app: node
  ports:
    - port: 3000        # Service port
      targetPort: 3000  # Port your Node.js app listens on
