k8s/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: "2.54.35.68/32, 31.187.78.23/32"
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/limit-connections: "1"
    nginx.ingress.kubernetes.io/enable-cache: "false"

spec:
  rules:
  - http:
      paths:
      - path: /api/flask
        pathType: Prefix
        backend:
          service:
            name: flask-service
            port:
              number: 5000
