k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mashcantas-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Ensure this matches your Ingress controller
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/enable-cache: "false"
    nginx.ingress.kubernetes.io/limit-rpm: "5"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "1"
    nginx.ingress.kubernetes.io/limit-rate-after: "0"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.124.0.0/16"
spec:
  rules:
    # Rule for Node.js service
    - host: www.node.mashcantas.com
      http:
        paths:
          - path: /api/node
            pathType: Prefix
            backend:
              service:
                name: nodejs-service
                port:
                  number: 3000
    # Rule for Flask service
    - http:
        paths:
          - path: /api/flask
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 5000
