k8s/node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Ensure this matches your Ingress controller
    # Add any other necessary annotations here
spec:
  ingressClassName: nginx
  rules:
    - host: node.mashcantas.com
      http:
        paths:
          - path: /api/node
            pathType: Prefix
            backend:
              service:
                name: nodejs-service
                port:
                  number: 3000
          - path: /api/fetch
            pathType: Prefix
            backend:
              service:
                name: nodejs-service
                port:
                  number: 3000
